Bug fixes and update to 1.20.6