@@ -2,27 +2,25 @@ package github.tyonakaisan.commanditem.item;
 
 import com.google.inject.Inject;
 import com.google.inject.Singleton;
-import github.tyonakaisan.commanditem.util.ItemBuilder;
 import github.tyonakaisan.commanditem.util.NamespacedKeyUtils;
 import github.tyonakaisan.commanditem.util.PlaceholderUtils;
-import io.papermc.paper.inventory.ItemRarity;
 import net.kyori.adventure.key.Key;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.minimessage.MiniMessage;
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.EquipmentSlot;
+import org.bukkit.inventory.ItemRarity;
 import org.bukkit.inventory.ItemStack;
+import org.bukkit.inventory.meta.BookMeta;
 import org.bukkit.inventory.meta.ItemMeta;
+import org.bukkit.inventory.meta.SkullMeta;
 import org.bukkit.persistence.PersistentDataType;
 import org.checkerframework.checker.nullness.qual.NonNull;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.checkerframework.framework.qual.DefaultQualifier;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 
 /*
 ItemMetaを変える場合は必ずcloneすること
@@ -41,26 +39,7 @@ public final class Convert {
     }
 
     public static Item defaultItem(final Key key, final ItemStack itemStack) {
-        @Nullable Component metaDisplayName = itemStack.getItemMeta().displayName();
-        var color = itemStack.getRarity() == ItemRarity.COMMON
-                ? ""
-                : String.format("<%s>", itemStack.getRarity().getColor());
-        var itemTranslationKey = itemStack.getType().getItemTranslationKey() == null
-                ? ""
-                : String.format("%s<lang:%s>", color, itemStack.getType().getItemTranslationKey());
-
-        var displayName = metaDisplayName == null
-                ? itemTranslationKey
-                : MiniMessage.miniMessage().serialize(metaDisplayName);
-
-        final @Nullable List<Component> lore = itemStack.getItemMeta().lore();
-        final List<String> copyLore = lore == null
-                ? Collections.emptyList()
-                : lore.stream()
-                .map(text -> MiniMessage.miniMessage().serialize(text))
-                .toList();
-
-        return new Item(displayName, copyLore, itemStack, defaultAttributes(key), Map.of(Action.Item.LEFT_CLICK, List.of(defaultCommand())));
+        return new Item(getDisplayName(itemStack), getLore(itemStack), itemStack, defaultAttributes(key), Map.of(Action.Item.LEFT_CLICK, List.of(defaultCommand())));
     }
 
     public static Attributes defaultAttributes(final Key key) {
@@ -69,6 +48,48 @@ public final class Convert {
 
     public static Command defaultCommand() {
         return new Command(Action.Command.COMMAND, List.of(), true, "1", "1", "0", "1");
+    }
+
+    private static List<String> getLore(final ItemStack itemStack) {
+        final @Nullable List<Component> lore = itemStack.getItemMeta().lore();
+        return lore == null
+                ? Collections.emptyList()
+                : lore.stream()
+                .map(MiniMessage.miniMessage()::serialize)
+                .toList();
+    }
+
+
+    private static String getDisplayName(final ItemStack itemStack) {
+        final var itemMeta = itemStack.getItemMeta();
+        final @Nullable Component displayName = itemMeta.displayName();
+        if (displayName == null) {
+            // Return empty if skullMeta or itemName is present
+            if (itemMeta.hasItemName() || itemMeta instanceof SkullMeta || isWrittenBook(itemStack)) {
+                return "";
+            }
+            return getTranslationKey(itemStack);
+        }
+
+        return MiniMessage.miniMessage().serialize(displayName);
+    }
+
+    private static boolean isWrittenBook(final ItemStack itemStack) {
+        return itemStack.getItemMeta() instanceof final BookMeta bookMeta && bookMeta.hasTitle();
+    }
+
+    private static String getRarityColor(final ItemStack itemStack) {
+        final var itemMeta = itemStack.getItemMeta();
+        return !itemMeta.hasRarity() || itemMeta.getRarity().equals(ItemRarity.COMMON)
+                ? ""
+                : String.format("<%s>", itemMeta.getRarity().color());
+    }
+
+    private static String getTranslationKey(final ItemStack itemStack) {
+        final var itemType = itemStack.getType();
+        return itemType.getItemTranslationKey() == null
+                ? ""
+                : String.format("%s<lang:%s>", getRarityColor(itemStack), itemType.getItemTranslationKey());
     }
 
     public void setPlayerHandItem(final ItemStack itemStack, final Player player, final Action.Item action, final @Nullable EquipmentSlot equipmentSlot) {
@@ -105,11 +126,12 @@ public final class Convert {
         cloneItemStack.editMeta(meta -> meta.getPersistentDataContainer().set(NamespacedKeyUtils.usageKey(), PersistentDataType.INTEGER, newCounts));
 
         if (newCounts >= item.attributes().maxUses(player)) {
+            var reduceAmountItem = this.itemRegistry.toItemStack(item, player);
+            reduceAmountItem.setAmount(cloneItemStack.getAmount() - 1);
+
             return cloneItemStack.getAmount() == 1
                     ? new ItemStack(Material.AIR)
-                    : ItemBuilder.of(this.itemRegistry.toItemStack(item, player))
-                    .amount(cloneItemStack.getAmount() - 1)
-                    .build();
+                    : reduceAmountItem;
         } else {
             return cloneItemStack;
         }
